...
        android:textColor="#FCFAF9"
        android:textSize="59sp"
        app:fontFamily="@font/aguafina_script" />
<!--    android:src="@drawable/b"-->

    <EditText
        android:id="@+id/locationEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/findRestaurantsButton"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="95dp"
        android:hint="Enter Zip Code"
        android:lineSpacingExtra="18sp"
        android:padding="5dp"
        android:singleLine="true"
...
